<resources>
    <string name="app_name">BeautyNetwork</string>
    <string name="register_info">You will receive an email with instructions for how to confirm your email address in a few minutes.</string>
    <string name="password_reset_info">You will receive an email with instructions on how to reset your password in a few minutes.</string>
    <string name="main_page_button">main page</string>
    <string name="make_up_details">MAKE UP DETAILS</string>
    <string name="make_up">MAKE UP</string>
    <string name="make_up_details_button">make up details</string>
    <string name="services">Services</string>
    <string name="recommended">Recommended</string>
    <string name="home">HOME</string>
    <string name="about">About Medical Beauty Institut Nadia Baptista</string>
    <string name="about_text">In der Münchner Leopoldstraße 50 befindet sich im ersten Stock des Hinterhofes beim Hofbräuhaus das Medical Beauty Institut,
        wo sich eine top-ausgebildete Kosmetikerin rund um deine Schönheit kümmert.
        Wenn du dir und deiner Haut etwas Gutes tun willst, kannst du deinen persönlichen Wunschtermin noch heute per App buchen.
        In ihrer modernen Praxis im Herzen Schwabings empfängt dich Nadia Baptista liebevoll und herzlich,
        sodass du dich vom ersten Moment an pudelwohl fühlen kannst.
        Nadia ist ausgebildete Fachkosmetikerin, Visagistin,
        Fußpflegerin sowie Spezialistin für apparative Kosmetik.
        Aus diesem Grund geht sie bei einem ausführlichen
        Beratungsgespräch individuell auf dich und die Bedürfnisse deiner Haut ein,
        sodass sie dir die bestmögliche Behandlung garantieren kann. Qualitativ hochwertige und nachhaltige Produkte und Geräte von REVIDERM verhelfen
        zu seinem sichtbaren Ergebnis der Haut.
        Worauf wartest du also noch? Komm vorbei und lass dich von ihrer Erfahrung überzeugen!</string>
    <string name="impressum">Impressum</string>
    <string name="priceList">Price List</string>
    <string name="item_label">Items</string>
    <string name="search_services">search services</string>
    <string name="info">Dear patient,
all diseases can have a consequence to your treatment. Please fill this questionnaire very carefully.
This questionnaire helps us treat you in the very best way.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_1">"Are you taking medication on a regular Basis? If so, wich ones?"</string>
    <string name="question_2">Are you taking any medicine to help make your blood thinner? To block?(i.e. Marcumar, Pradaxa oder Xarelto)? If yes, which ones?</string>
    <string name="question_3">Do you have any allergies, allergic reaction? To certain materials, medicines, aliments?</string>
    <string name="question_4">Do you have a pacemaker?</string>
    <string name="question_5">Do or did you have one of the following diseases? Contagious diseases? (i.e. Tuberculosis, Hepatitis, Aids)?</string>
    <string name="question_6">Do or did you have one of the following diseases? Heart disease? High blood pressure or low blood pressure? </string>
    <string name="question_7">Do or did you have one of the following diseases? Nerve diseases? Spasm attacks? Thyroid diseases? Diabetes? Blood diseases?</string>
    <string name="question_8">Are you a men or a women: Are you pregnant? If so which month?</string>
    <string name="username">Username</string>
    <string name="type_here">Type here …</string>
    <string name="send">Send</string>
    <string name="chats">Chats</string>
    <string name="chat_message_out">Chat Message Out</string>
    <string name="chat_message_in">Chat Message In</string>
    <string name="medical_beauty_institut_nadia_baptista">Medical Beauty Institut Nadia Baptista</string>
    <string name="straße">Leopoldstraße 50</string>
    <string name="cdp">80802 München</string>
    <string name="tel">Tel: +49 152 14 17 19 83</string>
    <string name="fax">Fax: +49 141 1 14 17 19 83</string>
    <string name="email...">E-Mail: info@medicalbeautyinstitutnadiabaptista.com</string>
    <string name="Geschäftsführer...">Geschäftsführer: Nadia Gaspar Baptista</string>
    <string name="sitz_der_gesellschaft">Sitz der Gesellschaft: München</string>
    <string name="Amtsgericht">Amtsgericht München</string>
    <string name="HRB...">HRB 80333</string>
    <string name="USt...">USt_IdNr. DE243303041</string>

</resources>